tests/analyzer/errors/non_comptime_global.ray
// Global
fn trash() -> int { return 5 }

var a = trash()

// Function default
fn getValue() -> int { return 5 }
fn func(a = getValue()) {}

// Structure default
struct Person {
    age: int = getValue(),
}

fn main() { }
